tile selection, infinite autoscroll
